--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="src/css/main.css">
     <link rel="stylesheet" href="src/css/header.css">
     <link rel="stylesheet" href="src/css/formulario.css">
+    <script type="text/javascript" src="src/js/script.js"></script>
 </head>
 
 <body>
+    <!-- <script src="src/js/script.js"></script> -->
 
     <!-- Esse é o cabeçalho (header) principal -->
     <header>
@@ -60,7 +62,7 @@
             <h3>Fique por dentro das novidades</h3>
 
             <!-- Formulário de cadastro -->
-            <form id="form" onsubmit="ValidateForm(event);">
+            <form id="form" onsubmit="validateForm(event);">
                 <fieldset>
                     <legend>
                         Continue para acessar informações do RePrograma e não perder as próximas
@@ -89,8 +91,6 @@
     <footer>
         <p>© Copyright Paraná Banco 2022</p>
     </footer>
-
-    <script src="src/js/script.js"></script>
 </body>
 
 </html>
